# play

./: com.github.lucasscvvieira.Play.json  meson.build
data/: com.github.lucasscvvieira.Play.appdata.xml.in  com.github.lucasscvvieira.Play.desktop.in  com.github.lucasscvvieira.Play.gschema.xml  meson.build
data/icons/: meson.build
data/ui/: meson.build  play.gresource.xml  window.blp
data/ui/gtk/: help-overlay.blp
flatpak/: com.github.lucasscvvieira.Play.json  python3-requirements.json
po/: POTFILES  meson.build
src/: main.py  meson.build  play.in  player.py  window.py  window.ui
src/widgets/: file_chooser.py  mpv_glarea.py
